ajustes finais para fechar a versao inicial do projeto demo

--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -5,6 +5,7 @@
 
 log4j.rootLogger=error, A1
 
+#habilita o nivel de DEBUG para logs escritos nas classes do projeto
 log4j.logger.br.com.yaw.spgae=DEBUG
 
 # Configure the console as our one appender
